--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
@@ -1,91 +1,64 @@
-﻿
+﻿@using Sep2018_MVC.Models
+@model Sep2018_MVC.Models.Attendance
 @{
     ViewBag.Title = "CheckOnline";
     Layout = "~/Areas/Staff/Views/Shared/_layoutAdmin.cshtml";
+    List<User> meo = new List<User>();
+    meo = (List<User>)ViewData["user"];
+    List<AttendanceType> attenType = new List<AttendanceType>();
+    attenType = (List<AttendanceType>)ViewData["AttenType"];
+
+    SEP_2018_T6Entities db = new SEP_2018_T6Entities();
+    var ScheDetail = db.ScheduleDetails.FirstOrDefault(s => s.id == Model.FK_ScheduleDetail);
+    var learning = db.Learnings.FirstOrDefault(s => s.id == ScheDetail.FK_Learning);
 }
 
 <div class="container-fluid">
     <!-- Viết nội dung vào đây -->
     <div class="row">
         <div class="col-md-12">
-            <h3>K21T1 - ComputerScient - 05/17/2018</h3>
+            <h3>@Model.ScheduleDetail.Schedule.Course.CourseName@learning.Class.ClassName - @learning.Subject.SubjectName - @Model.Date</h3>
         </div>
         <div class="col-md-12 first">
             <h1>Danh sách điểm danh sinh viên</h1>
         </div>
         <div class="col-md-offset-2 col-md-8">
-            <table id="table" class="table ">
-                <tr class="trth">
-                    <th>STT</th>
-                    <th>MSSV</th>
-                    <th>Lớp</th>
-                    <th>Họ và Tên</th>
-                    <th>Trạng thái</th>
-                    <th>Ghi chú</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>T150737</td>
-                    <td>K21T1</td>
-                    <td>La Văn Hớn</td>
-                    <td>
-                        <select id="sec">
-                            <option value="1">Có học</option>
-                            <option value="0">Vắng</option>
-                            <option value="0.5">Trễ</option>
-                            <option value="2">Có phép</option>
-                        </select>
-                    </td>
-                    <td>Lười học</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>T150737</td>
-                    <td>K21T1</td>
-                    <td>La Văn Hớn</td>
-                    <td>
-                        <select id="sec">
-                            <option value="1">Có học</option>
-                            <option value="0">Vắng</option>
-                            <option value="0.5">Trễ</option>
-                            <option value="2">Có phép</option>
-                        </select>
-                    </td>
-                    <td>Lười học</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>T150737</td>
-                    <td>K21T1</td>
-                    <td>La Văn Hớn</td>
-                    <td>
-                        <select id="sec">
-                            <option value="1">Có học</option>
-                            <option value="0">Vắng</option>
-                            <option value="0.5">Trễ</option>
-                            <option value="2">Có phép</option>
-                        </select>
-                    </td>
-                    <td>Lười học</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>T150737</td>
-                    <td>K21T1</td>
-                    <td>La Văn Hớn</td>
-                    <td>
-                        <select id="sec">
-                            <option value="1">Có học</option>
-                            <option value="0">Vắng</option>
-                            <option value="0.5">Trễ</option>
-                            <option value="2">Có phép</option>
-                        </select>
-                    </td>
-                    <td>Lười học</td>
-                </tr>
-          
-            </table>
-            <ul ><button style="margin-left:230px" type="Lưu" class="btn btn-default">Download File</button></ul>
+            <form>
+                <table id="table" class="table ">
+                    <tr class="trth">
+                        <th>STT</th>
+                        <th>MSSV</th>
+                        <th>Lớp</th>
+                        <th>Họ và Tên</th>
+                        <th>Trạng thái</th>
+                        <th>Ghi chú</th>
+                    </tr>
+                    @{ 
+                        int count = 0;
+                        foreach (var item in meo)
+                        {
+                            count = count + 1;
+                            <tr>
+                                <td>@count</td>
+                                <td>@item.username</td>
+                                <td>@Model.ScheduleDetail.Schedule.Course.CourseName@item.Class.ClassName</td>
+                                <td>@item.People.FirstOrDefault(s => s.MS == item.username).Name</td>
+                                <td>
+
+                                    <select id="sec">
+                                        @foreach (var value in attenType)
+                                        {
+                                            <option value="@value.id">@value.TypeName</option>
+
+                                        }
+                                    </select>
+                                </td>
+                                <td><input type="text" class="form-control" name="txt_note" /></td>
+                            </tr>
+                        }
+                    }
+                </table>
+            </form>
         </div>
     </div>
 </div>
