--- a/Sep2018_MVC/Areas/Staff/Views/AccountStaff/ChangePassword.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/AccountStaff/ChangePassword.cshtml
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>*@
-            <div class="row first_two_row">
+            @*<div class="row first_two_row">
                 <div class="container first_two_con">
                     <div class="col-md-12 first_two_div_main">
                         <div class="col-md-4">
@@ -33,7 +33,7 @@
                                 <li><i class="fas fa-home fa-3x"></i></li>
                                 <li><a href="#">Cổng trực tuyến</a></li>
                             </ul>
-                        </div>
+                        </div>*@
                         <!-- Viết vào phần này là phần thân wapper
                         <div class="col-md-4">
                             <div class="dropdown">
@@ -95,7 +95,7 @@
                 <td><label>Nhập lại mật khẩu:</label></td>
                 <td><input Class="b1" type="password"></td>
             </ul>
-            <ul><button type="Lưu" class="btn btn-default">Lưu thay đổi</button></ul>
+            <ul><button type="Lưu" class="btn btn-default">Save Change</button></ul>
         </dir>
 
 
@@ -116,7 +116,7 @@
                         <h3>&ensp;=</h3>*@
 
                     </div>
-                    <div class="col-md-6">
+                    @*<div class="col-md-6">
                         <div class="col-md-12 footer_right">
                             <p>Văn Lang University</p>
                             <ul class="footer_right_ul" type="none">
@@ -140,7 +140,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </div>
