link view con va add view Schedule

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -25,7 +25,7 @@
     </li>
 
     <li class="tkb">
-        <a class="active" href="#">
+        <a class="active" href="/Staff/Teacher/Schedule">
             <i class="fa fa-dashboard"></i>
             <span>Schedule</span>
         </a>
