--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
@@ -32,23 +32,29 @@
     </li>
 
     <li class="rp">
-        <a class="active" href="#">
+        <a class="active" href="/Staff/AccountStaff/Report">
             <i class="fa fa-dashboard"></i>
             <span>Report</span>
+        </a>
+    </li>
+
+    <li class="change">
+        <a class="active" href="~/Staff/AccountStaff/ChangePassword">
+            <i class="fa fa-dashboard"></i>
+            <span>Change password</span>
         </a>
     </li>
 
     <li class="sub-menu">
         <a href="javascript:;">
             <i class="fa fa-desktop"></i>
-            <span>View attendance</span>
+            <span>Attendance</span>
         </a>
         <ul class="sub">
-            <li>@Html.ActionLink("Course 20", "khoa20", "Course")</li>
-            <li>@Html.ActionLink("Course 21", "khoa21", "Course")</li>
-            <li>@Html.ActionLink("Course 22", "khoa22", "Course")</li>
-            <li>@Html.ActionLink("Course 23", "khoa23", "Course")</li>
-
+            <li>@Html.ActionLink("Course 20", "Course", "Teacher")</li>
+            <li>@Html.ActionLink("Course 21", "Course", "Teacher")</li>
+            <li>@Html.ActionLink("Course 22", "Course", "Teacher")</li>
+            <li>@Html.ActionLink("Course 23", "Course", "Teacher")</li>
         </ul>
     </li>
 
