--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/Course.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/Course.cshtml
@@ -22,7 +22,7 @@
     </div>
 
     <div class="SProject col-sm-12">
-        <button class="btn btn-primary" type="button" data-toggle="dropdown" ">
+        <button class="btn btn-primary" type="button" data-toggle="dropdown" >
             Softwware Project
             <span class="caret"></span>
         </button>
