--- a/Sep2018_MVC/Views/Home/Contact.cshtml
+++ b/Sep2018_MVC/Views/Home/Contact.cshtml
@@ -2,16 +2,25 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Import / Export database data from/to XML.</h3>
+<div>
+    <form class="upfile" role="upfile" action="@Url.Action("Contact","Home")" method="post">
+        <table>
+            <tr>
+                <td>Select File : </td>
+                <td>
+                    <input id="File1" type="file" />
+                </td>
+                <td>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </td>
+            </tr>
+        </table>
+        </br>
+        <div>
+            
+           
+        </div>
+    </form>
+</div>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
