--- a/Sep2018_MVC/Views/Home/Index.cshtml
+++ b/Sep2018_MVC/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
 }
 
 <div class="col-md-12">
-    <h1 >Wellcome to team <span style="color:red">Hoa Roi Cua Phat</span> </h1>
+    <br /><br /></br>
+    <h1 style="padding-left: 30%">Vui lòng <a href="~/Account" style="color:red">đăng nhập</a> để sử dụng các tính năng </h1>
 </div>
