--- a/Sep2018_MVC/Content/main.css
+++ b/Sep2018_MVC/Content/main.css
@@ -1,5 +1,5 @@
 .first_one_row{
-	background: #ffa90b;
+	background: #ffffff;
 }
 .first_one{
 	padding: 20px;
@@ -26,15 +26,17 @@
 	padding: 0;
 }
 .footer_right p{
-	color: #3e3eef;
+
+	color: #000000;
 	font-weight: bold;
-	font-size: 35px;
+	font-size: 15px;
 }
 .footer_row{
-	background: #ffa90b;
+	background: #ffffff;
 }
 .footer_right_ul{
 	font-size: 20px;
+    font-size: 13px;
 }
 
 /*Check Online*/
@@ -69,4 +71,204 @@
 }
 .noti_first > div:not(:hover) {
 	transition: 0.5s; 
+}
+/*index*/
+
+#cssmenu,
+#cssmenu ul,
+#cssmenu ul li,
+#cssmenu ul li a {
+    margin: 0;
+    padding: 0;
+    padding-left: 3em;
+    border: 1px;
+    list-style: none;
+    line-height: 0.5;
+    display: block;
+    position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.cssmenu {
+    margin: 0;
+    padding: 0;
+    padding-left: 10em;
+    border: 0;
+    list-style: none;
+    line-height: 2;
+    display: block;
+    position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+    #cssmenu:after,
+    #cssmenu > ul:after {
+        content: ".";
+        display: block;
+        clear: both;
+        visibility: hidden;
+        line-height: 0;
+        height: 0;
+
+    }
+
+#cssmenu {
+    width: auto;
+    border-bottom: 3px solid #47c9af;
+    font-family: Raleway, sans-serif;
+    line-height: 1;
+}
+
+    #cssmenu ul {
+        background: #ffffff;
+    }
+
+    #cssmenu > ul > li {
+        float: left;
+    }
+
+    #cssmenu.align-center > ul {
+        font-size: 0;
+        text-align: center;
+    }
+
+        #cssmenu.align-center > ul > li {
+            display: inline-block;
+            float: none;
+        }
+
+    #cssmenu.align-right > ul > li {
+        float: right;
+    }
+
+        #cssmenu.align-right > ul > li > a {
+            margin-right: 0;
+            margin-left: -4px;
+        }
+
+    #cssmenu > ul > li > a {
+        z-index: 2;
+        padding: 18px 25px 12px 25px;
+        font-size: 15px;
+        font-weight: 400;
+        text-decoration: none;
+        color: #444444;
+        -webkit-transition: all .2s ease;
+        -moz-transition: all .2s ease;
+        -ms-transition: all .2s ease;
+        -o-transition: all .2s ease;
+        transition: all .2s ease;
+        margin-right: -4px;
+    }
+
+        #cssmenu > ul > li.active > a,
+        #cssmenu > ul > li:hover > a,
+        #cssmenu > ul > li > a:hover {
+            color: #ffffff;
+        }
+
+        #cssmenu > ul > li > a:after {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            z-index: -1;
+            width: 100%;
+            height: 120%;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            content: "";
+            -webkit-transition: all .2s ease;
+            -o-transition: all .2s ease;
+            transition: all .2s ease;
+            -webkit-transform: perspective(5px) rotateX(2deg);
+            -webkit-transform-origin: bottom;
+            -moz-transform: perspective(5px) rotateX(2deg);
+            -moz-transform-origin: bottom;
+            transform: perspective(5px) rotateX(2deg);
+            transform-origin: bottom;
+        }
+
+        #cssmenu > ul > li.active > a:after,
+        #cssmenu > ul > li:hover > a:after,
+        #cssmenu > ul > li > a:hover:after {
+            background: #47c9af;
+            
+        }
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+    .form-signin .form-signin-heading, .form-signin .checkbox {
+        margin-bottom: 10px;
+    }
+
+    .form-signin .checkbox {
+        font-weight: normal;
+    }
+
+    .form-signin .form-control {
+        position: relative;
+        font-size: 16px;
+        height: auto;
+        padding: 10px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+        .form-signin .form-control:focus {
+            z-index: 2;
+        }
+
+    .form-signin input[type="text"] {
+        margin-bottom: -1px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
+
+.account-wall {
+    margin-top: 20px;
+    padding: 40px 0px 20px 0px;
+    background-color: #f7f7f7;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.login-title {
+    color: #555;
+    font-size: 18px;
+    font-weight: 400;
+    display: block;
+}
+
+.profile-img {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.need-help {
+    margin-top: 10px;
+}
+
+.new-account {
+    display: block;
+    margin-top: 10px;
 }
