--- a/Sep2018_MVC/Views/Shared/_Layout.cshtml
+++ b/Sep2018_MVC/Views/Shared/_Layout.cshtml
@@ -7,71 +7,128 @@
     <link href="~/Content/main.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/fontawesome-all.min.css" rel="stylesheet" />
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <div class="cssmenu">
+        <a class="logo" href="~/Home/Index" title="Trang chủ" id="yui_3_17_2_1_1529435986177_153">
+            <img src="~/images/logo.png" alt="" id="team6">
+        </a>
+    </div>
+    <br />
+    <br />
+    <div id='cssmenu'>
+        <ul class="navbar-nav text-uppercase ml-auto">
+            @if (Session["username"] == null) {
+            <li class="nav-item active">
+                <a href="~/Home/Index">Trang Chủ</a>
+            </li>
+            }
+            @if (Session["username"] != null)
+            {
+                if ((int)Session["role"] == 10)
+                {
+                    <li class="nav-item active">
+                        <a href="~/Sinhvien">Điểm danh</a>
+                    </li>
+                }
+                if ((int)Session["role"] == 9)
+                {
+                    <li class="nav-item active">
+                        <a href="~/Giangvien">Điểm danh</a>
+                    </li>
+                }
+                if ((int)Session["role"] == 11)
+                {
+                    <li class="nav-item active">
+                        <a href="~/Giaovu">Điểm danh</a>
+                    </li>
+                }
+            }
+            else
+            {
+                <li class="nav-item">
+                    <a href="~/Account">Điểm danh</a>
+                </li>
+            }
+
+            @if (Session["username"] == null)
+            {
+                <li class="nav-item" style="padding-left: 80em;">
+                    <a href="~/Account/Index">Đăng nhập</a>
+                </li>
+            }
+            else
+            {
+                <li class="nav-item" style="padding-left: 80em;">
+                    <a href="~/Account/Logout">Đăng xuất</a>
+                </li>
+            }
+        </ul>
+    </div>
 </head>
 <body>
     <!-- Header tiêu đề trang không đụng tới -->
-    <header class="first">
-        <div class="container-fluid">
-            <div class="row first_one_row">
-                <div class="container first_one">
-                    <div class="col-md-4">
-                        <img class="img-responsive" src="/images/logo.png">
-                    </div>
-                </div>
-            </div>
-            <div class="row first_two_row">
-                <div class="container first_two_con">
-                    <div class="col-md-12 first_two_div_main">
-                        <div class="col-md-4">
-                            <ul class="first_two_ul" type="none">
-                                <li><i class="fas fa-home fa-3x"></i></li>
-                                <li><a href="#">Cổng trực tuyến</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="dropdown">
-                                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                                    Xem Điểm
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K19T</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K20T</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K21T</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="dropdown">
-                                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                                    Xem Điểm Danh
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Caculus 1</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Caculus 2</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">ComputerScient</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Intro to DataBase</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Intro to NetWork</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">QTDN - Tập làm cha</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">English</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    <!-- <header class="first">
+         <div class="container-fluid">
+             <div class="row first_one_row">
+                 <div class="container first_one">
+                     <div class="col-md-4">
+                     </div>
+                 </div>
+             </div>
+             <div class="row first_two_row">
+                 <div class="container first_two_con">
+                     <div class="col-md-12 first_two_div_main">
+                         <div class="col-md-4">
+                             <ul class="first_two_ul" type="none">
+                                 <li><i class="fas fa-home fa-3x"></i></li>
+                                 <li><a href="#">Cổng trực tuyến</a></li>
+                             </ul>
+                         </div>
+                         <div class="col-md-4">
+                             <div class="dropdown">
+                                 <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                                     Xem Điểm
+                                     <span class="caret"></span>
+                                 </button>
+                                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K19T</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K20T</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K21T</a></li>
+                                 </ul>
+                             </div>
+                         </div>
+                         <div class="col-md-4">
+                             <div class="dropdown">
+                                 <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                                     Xem Điểm Danh
+                                     <span class="caret"></span>
+                                 </button>
+                                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Caculus 1</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Caculus 2</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">ComputerScient</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Intro to DataBase</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Intro to NetWork</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">QTDN - Tập làm cha</a></li>
+                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">English</a></li>
+                                 </ul>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </header>
+        -->
     <!-- Viết vào phần này là phần thân wapper -->
     @RenderBody()
 
     <!-- Banner -->
-    <div class="container-fluid">
-        <div class="row four_row">
-
-        </div>
-    </div>
     <!-- Footer phần cuối cùng không đụng tới -->
     <footer class="container-fluid">
         <div class="row footer_row">
@@ -79,18 +136,16 @@
                 <div class="row">
                     <div class="col-md-6">
                         <!-- Điền nội dung vào sau -->
-                        <h3>Cần content cụ thể ?</h3>
-                        <h3>&ensp;||</h3>
-                        <h3>&ensp;||</h3>
-                        <h3>&ensp;||</h3>
-                        <h3>\\&ensp;//</h3>
-                        <h3>&ensp;=</h3>
+                        <a class="logo" href="~/Home/Index" title="Trang chủ" id="yui_3_17_2_1_1529435986177_153">
+                            <img src="~/images/logo.png" alt="" id="team6">
+                        </a>
 
                     </div>
                     <div class="col-md-6">
                         <div class="col-md-12 footer_right">
-                            <p>Văn Lang University</p>
+
                             <ul class="footer_right_ul" type="none">
+                                <p>Văn Lang University</p>
                                 <li>
                                     <strong>Trụ sở 1:</strong> Nguyễn Khắc Nhu Quận 1
                                     <ul>
@@ -103,12 +158,7 @@
                                         <li>ĐT: 113</li>
                                     </ul>
                                 </li>
-                                <li>
-                                    <strong>Trụ sở 3:</strong> Gò Vấp
-                                    <ul>
-                                        <li>ĐT: 113</li>
-                                    </ul>
-                                </li>
+
                             </ul>
                         </div>
                     </div>
