Complete modul sinh vien

--- a/Sep2018_MVC/Views/Attendance/Index.cshtml
+++ b/Sep2018_MVC/Views/Attendance/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Sep2018_MVC.Models.AttendanceDetail>
+﻿@*model IEnumerable<Sep2018_MVC.Models.AttendanceDetail>
     @{
         Layout = "~/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml";
     }
@@ -14,3 +14,4 @@
             </table>
         }
     </div>
+*@
