--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/CreateSection.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/CreateSection.cshtml
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-6 section_second">
                     <div class="col-md-12">
-                        <form action="/Staff/Teacher/CheckOnline" method="get">
+                        <form action="/Staff/Teacher/CheckOnline" method="post">
                             <div class="form-group col-md-12">
                                 <label class="control-label col-sm-3">Khoá:</label>
                                 <div class="col-sm-9">
