--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/History.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/History.cshtml
@@ -38,18 +38,19 @@
                             var idLearn = db.ScheduleDetails.Find(item.FK_ScheduleDetail).FK_Learning;
                             var idSubject = db.Learnings.Find(idLearn).FK_Subject;
                             count++;
-                            <tr>
-                                <th>@count</th>
-                                <th>@db.Subjects.Find(idSubject).SubjectName</th>
-                                <th>@item.ScheduleDetail.Schedule.Course.CourseName</th>
-                                <th>@item.ScheduleDetail.Schedule.Course.CourseName@item.ScheduleDetail.Learning.Class.ClassName</th>
-                                <th>@item.Date</th>
-                                <th>@item.BeginTime</th>
-                                <th>@item.EndTime</th>
-                                <th>@item.Lesson</th>
-                                <th>@item.Unit_Lession</th>
-                                <th><a href="/Staff/Teacher/EditAttend/@item.id">Edit</a></th>
-                            </tr>
+                    <tr>
+                        <th>@count</th>
+                        <th>@db.Subjects.Find(idSubject).SubjectName</th>
+                        <th>@item.ScheduleDetail.Schedule.Course.CourseName</th>
+                        <th>@item.ScheduleDetail.Schedule.Course.CourseName@item.ScheduleDetail.Learning.Class.ClassName</th>
+                        <th>@item.Date</th>
+                        <th>@item.BeginTime</th>
+                        <th>@item.EndTime</th>
+                        <th>@item.Lesson</th>
+                        <th>@item.Unit_Lession</th>
+                        <th><a href="/Staff/Teacher/ViewsAttendance/@item.id">View</a></th>
+                        <th><a href="/Staff/Teacher/EditAttend/@item.id">Edit</a></th>
+                    </tr>
                         }
                     }
                 </tbody>
