--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
@@ -51,10 +51,8 @@
             <span>Attendance</span>
         </a>
         <ul class="sub">
-            <li>@Html.ActionLink("Course 20", "Course", "Teacher")</li>
-            <li>@Html.ActionLink("Course 21", "Course", "Teacher")</li>
-            <li>@Html.ActionLink("Course 22", "Course", "Teacher")</li>
-            <li>@Html.ActionLink("Course 23", "Course", "Teacher")</li>
+            <li>@Html.ActionLink("Online", "CreateSection", "Teacher")</li>
+            <li>@Html.ActionLink("Offline", "#", "Teacher")</li>
         </ul>
     </li>
 
