--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -1,5 +1,4 @@
 ﻿
-
 <ul class="sidebar-menu" id="nav-accordion">
     <p class="centered">
         <a href="profile.html">
@@ -51,10 +50,8 @@
             <span>Attendance</span>
         </a>
         <ul class="sub">
-            <li>@Html.ActionLink("Course 20", "Course", "Teacher")</li>
-            <li>@Html.ActionLink("Course 21", "Course", "Teacher")</li>
-            <li>@Html.ActionLink("Course 22", "Course", "Teacher")</li>
-            <li>@Html.ActionLink("Course 23", "Course", "Teacher")</li>
+            <li>@Html.ActionLink("Online", "CreateSection", "Teacher")</li>
+            <li>@Html.ActionLink("Offline", "#", "Teacher")</li>
         </ul>
     </li>
 
