Add Unit Test Index have session in SinhviencontrollerTest

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
@@ -49,9 +49,9 @@
         <a href="javascript:;">
             <i class="fa fa-desktop"></i>
             <span>Attendance</span>
-        </a>
+        </a.
         <ul class="sub">
-            <li>@Html.ActionLink("Online", "CreateSection", "Teacher")</li>
+            <li><a class="active" href="~/Staff/Teacher/CreateSection"></li>
             <li>@Html.ActionLink("Offline", "#", "Teacher")</li>
         </ul>
     </li>
