--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/ViewsAttendance.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/ViewsAttendance.cshtml
@@ -52,7 +52,7 @@
                                         }
                                     }
                                 </td>
-                                <td><input type="text" value="@db.AttendanceDetails.FirstOrDefault(s=>s.FK_User==item.username && s.FK_Attendance==Model.id).Note" class="form-control" name="txt_note" /></td>
+                                <td>@db.AttendanceDetails.FirstOrDefault(s=>s.FK_User==item.username && s.FK_Attendance==Model.id).Note</td>
                             </tr>
                         }
                     }
