--- a/Sep2018_MVC/Views/Sinhvien/Index.cshtml
+++ b/Sep2018_MVC/Views/Sinhvien/Index.cshtml
@@ -20,7 +20,8 @@
                         </option>
                     }
                 </select><br /><br />
-                <button type="submit" class="btn btn-default" style="font-size: x-large; color: blue; ">Click để xem</button>
+                @*<button type="submit" class="btn btn-default" style="font-size: x-large; color: blue; ">Click để xem</button>*@
+                               <a href="~/Staff/Teacher/History" class="btn btn-default" style="font-size: x-large; color: blue; ">Click để xem</a>
             </div>
         </form>
     </div>
