--- a/Sep2018_MVC/Views/Sinhvien/Account.cshtml
+++ b/Sep2018_MVC/Views/Sinhvien/Account.cshtml
@@ -50,7 +50,7 @@
                                     <tr>
                                         <td>Gender</td>
                                         <td>
-                                            @if (Model.sv_gtinh == true)
+                                            @if (Model.sv_gtinh == false)
                     {
                         <span>Nữ</span>
 }
