--- a/Sep2018_MVC/Views/Giangvien/Index.cshtml
+++ b/Sep2018_MVC/Views/Giangvien/Index.cshtml
@@ -2,3 +2,22 @@
 @{
 
 }
+<div class="panel panel-primary">
+    <div class="panel panel-info" style="padding: 5% 15% 10% 35%">
+        <div class="row">
+            <div class="col-xs-6 col-md-3">
+                <a href="~/Giangvien/Giangvien" class="thumbnail">
+                    <img src="..." alt="">
+                    <h1><span class="label label-success">Điểm danh</span></h1>
+                </a>
+            </div>
+            <div class="col-xs-6 col-md-3">
+                <a href="~/Giangvien/Account" class="thumbnail">
+                    <img src="..." alt="">
+                    <h1><span class="label label-default">T.tin tài khoản</span></h1>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
