--- a/Sep2018_MVC/Views/Sinhvien/Attendance.cshtml
+++ b/Sep2018_MVC/Views/Sinhvien/Attendance.cshtml
@@ -12,7 +12,7 @@
         <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
             @if (@ViewBag.msg != null)
             {
-    <h1><span class="label label-danger">  @ViewBag.msg</span> </h1>
+                <h1><span class="label label-danger">  @ViewBag.msg</span> </h1>
 
             }
             <br />
@@ -38,34 +38,38 @@
                                     <td>Ngày</td>
                                     <td>Tình trạng</td>
                                 </tr>
+
                                 <tbody>
                                     @foreach (var value in Model)
-                        {
-                            <tr>
+                                    {
+                                        <tr>
 
-                                <td>@value.sinhvien.sv_name</td>
+                                            <td>@value.sinhvien.sv_name</td>
 
-                                <td>@value.session.thoikhoabieu.tkb_date</td>
-                                @if (value.status.stt_name.Trim() == "co")
-                    {
-                        <td> <span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>}
+                                            <td>
+                                                @value.session.ss_create
+                                            </td>
+                                           
+                                            @if (value.status.stt_name.Trim() == "co")
+                                            {
+                                                <td> <span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>}
 
-                                @if (value.status.stt_name.Trim() == "vang")
-                    {
-                        <td> <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></td>}
+                                            @if (value.status.stt_name.Trim() == "vang")
+                                            {
+                                                <td> <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></td>}
 
-                                @if (value.status.stt_name.Trim() == "phep")
-                    {
-                        <td> <span class="glyphicon glyphicon-minus" aria-hidden="true"></span></td>}
+                                            @if (value.status.stt_name.Trim() == "phep")
+                                            {
+                                                <td> <span class="glyphicon glyphicon-minus" aria-hidden="true"></span></td>}
 
-                                @if (value.status.stt_name.Trim() == "tre")
-                    {
-                        <td> <span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></td>}
+                                            @if (value.status.stt_name.Trim() == "tre")
+                                            {
+                                                <td> <span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></td>}
 
 
 
-                            </tr>
-            }
+                                        </tr>
+                                    }
                                 </tbody>
 
 
