--- a/Sep2018_MVC/Views/Account/Login.cshtml
+++ b/Sep2018_MVC/Views/Account/Login.cshtml
@@ -9,7 +9,8 @@
 }           <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                      alt="">
-                <form class="form-signin" action="~/Account/" method="post">
+                <form class="form-signin" action="~/Account/Login" method="post">
+                    @Html.ValidationSummary(true)
                     <input type="text" class="form-control" placeholder="Email" required autofocus name="email">
                     <input type="password" class="form-control" placeholder="Password" required name="pw">
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
