Add Banner Design Authen with views Index Home

--- a/Sep2018_MVC/Views/Home/Index.cshtml
+++ b/Sep2018_MVC/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 }
 else
 {
-    <div  class="container">
+    <div  class="container" style="margin:300px 500px;">
         <div class="col-md-12">
             <h1>
                 Vui lòng <a href="~/Account/Login" style="color:red">đăng nhập</a> để sử dụng các tính năng
