--- a/Sep2018_MVC/Views/Shared/_Layout.cshtml
+++ b/Sep2018_MVC/Views/Shared/_Layout.cshtml
@@ -112,6 +112,10 @@
 
     <!-- Banner -->
     <!-- Footer phần cuối cùng không đụng tới -->
+    <div class="container-fluid">
+        <div class="row four_row">
+        </div>
+    </div>
     <footer class="container-fluid">
         <div class="row footer_row">
             <div class="container">
