--- a/Sep2018_MVC/Views/Account/Login.cshtml
+++ b/Sep2018_MVC/Views/Account/Login.cshtml
@@ -4,12 +4,13 @@
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
             @if (ViewBag.msg != null)
-    {
-        <h1 class="text-center login-title"><b style="color: crimson">@ViewBag.msg</b></h1>
-}           <div class="account-wall">
+            {
+                <h1 class="text-center login-title"><b style="color: crimson">@ViewBag.msg</b></h1>
+            }           <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                      alt="">
-                <form class="form-signin" action="~/Account/Login" method="post">
+                @using (Html.BeginForm("Login", "Account", new { returnURL = Request.QueryString["returnURL"] }, FormMethod.Post, new { @class = "form-signin" }))
+                {
                     @Html.ValidationSummary(true)
                     <input type="text" class="form-control" placeholder="Email" required autofocus name="email">
                     <input type="password" class="form-control" placeholder="Password" required name="pw">
@@ -21,7 +22,7 @@
                         Remember me
                     </label>
                     <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
-                </form>
+                }
             </div>
             <a href="#" class="text-center new-account">Create an account </a>
         </div>
