--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -1,8 +1,11 @@
 ﻿
+@{ 
+    string ava = Session["ava_user"].ToString();
+}
 <ul class="sidebar-menu" id="nav-accordion">
     <p class="centered">
-        <a href="profile.html">
-            <img src="~/Areas/Staff/Assert/Images/img/ui-sam.jpg" class="img-circle" width="60" />
+        <a href="~/Staff/Teacher/InformationAccount">
+            <img src="~/images/Avatar/@ava" class="img-circle" width="100"/>
         </a>
     </p>
     @*<h5 class="centered">Marcel Newman</h5>*@
