Design Complete ReviewAttendance and 50%Backend

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
@@ -8,11 +8,11 @@
     <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <title>@ViewBag.Title - Admin</title>
     @*<title>DASHGUM - FREE Bootstrap Admin Template</title>*@
-
+    <!--Css for build my Team-->
     <!-- Bootstrap core CSS -->
     <link href="~/Areas/Staff/Assert/Styles/bootstrap.css" rel="stylesheet" />
     <!--external css-->
-    <link href="~/Areas/Staff/Assert/Styles/admin.css" rel="stylesheet" />
+
 
     <link href="~/Areas/Staff/Assert/Styles/font-awesome.css" rel="stylesheet" />
 
@@ -23,7 +23,7 @@
     <link href="~/Areas/Staff/Assert/Styles/styleAdmin.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
-    
+
 
     <link href="~/Areas/Staff/Assert/Styles/style1.css" rel="stylesheet" />
 
@@ -32,6 +32,7 @@
     <script src="~/Areas/Staff/Assert/Script/Chart.js"></script>
 
     <!-- My Minh -->
+    <link href="~/Areas/Staff/Assert/Styles/admin.css" rel="stylesheet" />
     <link href="~/Areas/Staff/Assert/Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Areas/Staff/Assert/Styles/fontawesome-all.min.css" rel="stylesheet" />
 </head>
