--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/RevAttenDetail.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/RevAttenDetail.cshtml
@@ -1,10 +1,61 @@
 ﻿@using Sep2018_MVC.Models
-@model ScheduleDetail
+@model List<Attendance>
 @{
     ViewBag.Title = "RevAttenDetail";
     Layout = "~/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml";
+    SEP_2018_T6Entities1 db = new SEP_2018_T6Entities1();
+    var CourseName = TempData["Course"];
+    var ClassName = TempData["Class"];
+    var SubjectName = @TempData["Subject"];
 }
 
-<h2>RevAttenDetail</h2>
-<h1>@Model.id</h1>
+
+@if (Model == null)
+{
+    <h1>Chưa có buổi điểm danh nào cho môn học này...!</h1>
+}
+else
+{
+    <h2>@CourseName@ClassName - @SubjectName  </h2>
+    <div class="container">
+        <div class="row">
+            <div class="table-responsive">
+                <h1> History </h1>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th>Date</th>
+                            <th>Begin Time</th>
+                            <th>End Time</th>
+                            <th>Lesson</th>
+                            <th>Unit Lession</th>
+                            <th>Note</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            int count = 0;
+                            foreach (var item in Model)
+                            {
+                                var idLearn = db.ScheduleDetails.Find(item.FK_ScheduleDetail).FK_Learning;
+                                var idSubject = db.Learnings.Find(idLearn).FK_Subject;
+                                count++;
+                                <tr>
+                                    <th>@count</th>
+                                    <th>@item.Date</th>
+                                    <th>@item.BeginTime</th>
+                                    <th>@item.EndTime</th>
+                                    <th>@item.Lesson</th>
+                                    <th>@item.Unit_Lession</th>
+                                    <th><a href="/Staff/Teacher/ViewsAttendance/@item.id">View</a></th>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+}
 
