--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/ReviewAttendace.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/ReviewAttendace.cshtml
@@ -82,7 +82,7 @@
                             @foreach (var subim in ScheDetail.Where(s => s.Schedule.FK_Course == item.id).ToList())
                             {
                                 <li>
-                                    <a href="~/Staff/Teacher/RevAttenDetail/?id_ScheDetail=@subim.id&&ses_teacher=@sessionName">
+                                    <a href="~/Staff/Teacher/RevAttenDetail/?id_ScheDetail=@subim.id&&id_Class=@db.Learnings.FirstOrDefault(s => s.id == subim.FK_Learning).Class.id&&id_subject=@db.Learnings.FirstOrDefault(s => s.id == subim.FK_Learning).Subject.id&&id_course=@item.id">
                                         @item.CourseName@db.Learnings.FirstOrDefault(s => s.id == subim.FK_Learning).Class.ClassName
                                         @db.Learnings.FirstOrDefault(s => s.id == subim.FK_Learning).Subject.SubjectName
                                     </a>
