ReviewAttendance follow Student Complete

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -58,7 +58,7 @@
         </a>
         <ul class="sub">
             <li>@Html.ActionLink("Online", "CreateSection", "Teacher")</li>
-            <li>@Html.ActionLink("Offline", "#", "Teacher")</li>
+            <li>@Html.ActionLink("Offline", "vieOffline", "Teacher")</li>
         </ul>
     </li>
 
